syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hronosf.crawler.controller";
option java_outer_classname = "CrawlerServiceProto";

package com.hronosf.crawler.controller;

service Crawler {
  rpc startCrawlingAsUserActor(StartParsingAsUserRequestDTO) returns (CrawlerJobStatusDTO){}
  rpc startCrawlingAsServiceActor(StartParsingAsServiceRequestDTO) returns (CrawlerJobStatusDTO){}
  rpc getCrawlerProgress(GetCrawlerProgressByDomainsRequestDTO) returns (CrawlerProgressByDomainsResponseDTO){}
}

message StartParsingAsServiceRequestDTO{
  repeated string toParse = 1;
}

message StartParsingAsUserRequestDTO{
  int32 userId = 1;
  string accessKey = 2 ;
  repeated string toParse = 3;
}

message CrawlerJobStatusDTO{
  map<string, string> domainToStatus = 1;
}

message GetCrawlerProgressByDomainsRequestDTO{
  // required for .proto
}

message CrawlerProgressByDomainsResponseDTO{
  map<string, double> domainToProgressPercents = 1;
}